# irlume

./: .git-blame-ignore-revs  .gitignore  .packit.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  deny.toml  flake.nix
.cargo/: config.toml
.github/: CODEOWNERS  actionlint.yaml  dependabot.yml  pull_request_template.md  release-signing-key.asc
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  hardware-report.yml
.github/workflows/: audit.yml  ci.yml  hardware-suite.yml  install-matrix.yml  preflight.yml  scorecard.yml  slsa-provenance.yml  update-flake-lock.yml  verify-release.yml
benchmarks/: README.md  bench_cascade.py  bench_faceid.py  bench_insightface.py  bench_lfw_cascade.py  bench_nir_ext.py  blaze_parity.py  results-cascade.json  results-lfw-cascade.json  results-lfw.json  results-mp_results.json  results-nir_results.json
benchmarks/pad-candidates/: README.md  flir-live-session-scores.txt  flir_eval.py  live-flir-test.sh  mn3-session-scores.txt  mn3_eval.py  mn3_eval2.py
crates/irlume-auth/: Cargo.toml
crates/irlume-auth/examples/: assess_probe.rs  embed_parity.rs  landmark_dump.rs
crates/irlume-auth/src/: lib.rs
crates/irlume-camera/: Cargo.toml
crates/irlume-camera/examples/: ambient_ab.rs  burst_dump.rs  capture_bench.rs  concurrency_probe.rs  ir_strobe_probe.rs  rgb_burst_dump.rs
crates/irlume-camera/src/: ir_emitter.rs  lib.rs
crates/irlume-cli/: Cargo.toml
crates/irlume-cli/src/: bitwarden.rs  blinkcap.rs  commands.rs  fingerprint.rs  logs.rs  main.rs  models.rs  pad.rs  pamwire.rs  recovery.rs  secrets.rs  strays.rs  suncal.rs  tui.rs  uninstall.rs
crates/irlume-cli/tests/: cli.rs  cli_bench.rs  cli_capture.rs  cli_dispatch.rs
crates/irlume-common/: Cargo.toml
crates/irlume-common/src/: client.rs  config.rs  dbglog.rs  lib.rs  memlock.rs  platform.rs  secureboot.rs  thirdparty.rs
crates/irlume-core/: Cargo.toml
crates/irlume-core/src/: biopolicy.rs  calib.rs  crypto.rs  envelope.rs  fusion.rs  keyring.rs  lib.rs  matcher.rs  pad.rs  pcrsig.rs  policy.rs  recovery.rs  storage.rs  template_key.rs  tpm.rs  tpm_pcrlock.rs
crates/irlume-daemon/: Cargo.toml
crates/irlume-daemon/src/: main.rs  users.rs
crates/irlume-daemon/tests/: shutdown.rs
crates/irlume-fingerprint/: Cargo.toml
crates/irlume-fingerprint/src/: lib.rs
crates/irlume-liveness/: Cargo.toml
crates/irlume-liveness/src/: lib.rs
crates/irlume-pam/: Cargo.toml
crates/irlume-pam/src/: lib.rs
crates/irlume-pam/tests/: pamwrap.rs
crates/irlume-vision/: Cargo.toml
crates/irlume-vision/src/: align.rs  detect.rs  lib.rs  light.rs  moire.rs
crates/lumen-camera/: Cargo.toml
crates/lumen-camera/src/: lib.rs
crates/lumen-cli/: Cargo.toml
crates/lumen-cli/src/: main.rs
crates/lumen-common/: Cargo.toml
crates/lumen-common/src/: lib.rs
crates/lumen-core/: Cargo.toml
crates/lumen-core/src/: lib.rs  matcher.rs  storage.rs  tpm.rs
crates/lumen-daemon/: Cargo.toml
crates/lumen-daemon/src/: main.rs
crates/lumen-liveness/: Cargo.toml
crates/lumen-liveness/src/: lib.rs
crates/lumen-pam/: Cargo.toml
crates/lumen-pam/src/: lib.rs
crates/lumen-vision/: Cargo.toml
crates/lumen-vision/src/: align.rs  lib.rs
docs/: APP-INTEGRATION.md  ARCHITECTURE.md  COMMANDS.md  DEBUGGING.md  DEVELOPMENT.md  FAIRNESS.md  NIXOS.md  PAD_SELFTEST.md  PLATFORMS.md  ROADMAP.md  SECURITY_AT_REST.md  SETUP.md  STANDARDS.md  THREAT_MODEL.md  VERIFY.md
docs/adr/: 0001-liveness-pad-strategy.md  0002-challenge-response-liveness.md  0003-fingerprint-keyring-unlock.md  0004-per-enrollment-ir-adapter.md  0005-enroll-merge-protocol.md
docs/cross-distro/: 2026-07-01-arch-ubuntu-survey.md  family-vs-capability.md
docs/pad-results/: 2026-06-30-ir-liveness-selftest.md  2026-07-01-passive-ear-liveness.md  2026-07-01-passive-ear-realworld-nonresponse.md  2026-07-01-v-shape-blink-detector.md  2026-07-17-third-party-pad-candidates.md
docs/validation/: 2026-07-20-live-grant-path.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: ipc_request.rs  pcr_signature.rs  sealed_envelope.rs
fuzz/seeds/ipc_request/: authenticate.json  identify.json
fuzz/seeds/pcr_signature/: crash-multibyte-hex.seed  sha256.seed
fuzz/seeds/sealed_envelope/: minimal.json
models/: README.md  SHA256SUMS  blaze_face_short_range.onnx  face_landmark.onnx  ir_adapter.onnx
nix/: module.nix  package.nix
packaging/: README.md
packaging/apparmor/: usr.bin.irlumed  usr.local.bin.irlumed
packaging/arch/: PKGBUILD  build-pkg.sh  irlume.install
packaging/debian/: build-deb-container.sh  build-deb.sh  nfpm.yaml  postinstall.sh  preremove.sh
packaging/fedora/: 10-ort.conf  90-irlume.preset  irlume.spec
packaging/ppa/: build-ppa-container.sh
packaging/ppa/debian/: 10-ort.conf  NEWS  control  copyright  postinst  rules
packaging/selinux/: .gitignore  irlume.fc  irlume.te
packaging/systemd/: irlume-reconcile.path  irlume-reconcile.service  irlumed.service
scripts/: blinkcap-campaign.sh  build-ppa-source.sh  check-action-pins.sh  deploy-keyring-unlock.sh  deploy-passive-ear.sh  deploy-v3-adapter.sh  install-host.sh  install.sh  timing-report.py
