# irlume — Linux face authentication (PAM), successor to linhello.
# irlume = IR (infrared) + lume (illumination).
[workspace]
resolver = "2"
members = [
    "crates/irlume-common",
    "crates/irlume-camera",
    "crates/irlume-vision",
    "crates/irlume-liveness",
    "crates/irlume-core",
    "crates/irlume-auth",
    "crates/irlume-fingerprint",
    "crates/irlume-daemon",
    "crates/irlume-pam",
    "crates/irlume-cli",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.75"
license = "GPL-3.0-or-later"
repository = "https://github.com/archledger/irlume"
authors = ["archledger <archledger236@gmail.com>"]

# Shared dependency versions. Heavy/native deps are listed but commented so the
# scaffold compiles offline as pure stubs — uncomment per crate as you implement.
[workspace.dependencies]
irlume-common   = { path = "crates/irlume-common" }
irlume-camera   = { path = "crates/irlume-camera" }
irlume-vision   = { path = "crates/irlume-vision" }
irlume-liveness = { path = "crates/irlume-liveness" }
irlume-core     = { path = "crates/irlume-core" }
irlume-auth     = { path = "crates/irlume-auth" }
irlume-fingerprint = { path = "crates/irlume-fingerprint" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
zeroize    = { version = "1", features = ["derive"] }
tss-esapi  = "7.5"      # TPM 2.0 seal/unseal of the keyring secret
base64     = "0.22"     # envelope blob encoding
sha2       = "0.10"     # PolicyAuthorize digest math (signed-PCR path)
rsa        = { version = "0.9", features = ["sha2"] }  # parse systemd PCR-signing pubkey
aes-gcm    = "0.10"     # AES-256-GCM for template-at-rest encryption
argon2     = "0.5"      # Argon2id KDF for the recovery passphrase
rand       = "0.8"      # CSPRNG for template keys, nonces, recovery salts
libc       = "0.2"      # mlock/madvise (memlock), NSS getpwnam_r, SO_PEERCRED
rustfft    = "6"        # 2D FFT for the RGB-only moiré/screen-replay PAD cue

# ONNX inference. `load-dynamic` => libonnxruntime.so is dlopened at runtime, so
# this builds without the native lib present (you supply it on the target).
ort     = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "ndarray", "api-24"] }
ndarray = "0.16"

image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }

# --- native deps (enable as you build each crate) -----------------------------
# nokhwa    = { version = "0.10", features = ["input-native"] }   # V4L2 capture
# tss-esapi = "7"                                                 # TPM 2.0
# pamsm     = "0.5"                                               # PAM service module
# secrecy   = "0.10"

[profile.release]
lto = true
strip = true
