# irlume: Linux face authentication (PAM), successor to linhello.
# irlume = IR (infrared) + lume (illumination).
[workspace]
resolver = "2"
members = [
    "crates/irlume-common",
    "crates/irlume-camera",
    "crates/irlume-vision",
    "crates/irlume-liveness",
    "crates/irlume-core",
    "crates/irlume-auth",
    "crates/irlume-fingerprint",
    "crates/irlume-daemon",
    "crates/irlume-pam",
    "crates/irlume-cli",
]
# The cargo-fuzz harness is its own workspace (needs nightly + libfuzzer-sys);
# keep it out of the stable MSRV build here.
exclude = ["fuzz"]

[workspace.package]
version = "0.3.0"
edition = "2021"
rust-version = "1.88"
license = "GPL-3.0-or-later"
repository = "https://github.com/archledger/irlume"
authors = ["archledger <archledger236@gmail.com>"]

# Shared dependency versions. Heavy/native deps are listed but commented so the
# scaffold compiles offline as pure stubs; uncomment per crate as you implement.
[workspace.dependencies]
irlume-common   = { path = "crates/irlume-common" }
irlume-camera   = { path = "crates/irlume-camera" }
irlume-vision   = { path = "crates/irlume-vision" }
irlume-liveness = { path = "crates/irlume-liveness" }
irlume-core     = { path = "crates/irlume-core" }
irlume-auth     = { path = "crates/irlume-auth" }
irlume-fingerprint = { path = "crates/irlume-fingerprint" }

serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "2"
zeroize    = { version = "1", features = ["derive"] }
tss-esapi  = "7.5"      # TPM 2.0 seal/unseal of the keyring secret
base64     = "0.22"     # envelope blob encoding
sha2       = "0.11"     # PolicyAuthorize digest math (signed-PCR path)
rsa        = { version = "0.9", features = ["sha2"] }  # parse systemd PCR-signing pubkey
aes-gcm    = "0.11"     # AES-256-GCM for template-at-rest encryption
argon2     = "0.5"      # Argon2id KDF for the recovery passphrase
rand       = "0.10"      # CSPRNG for template keys, nonces, recovery salts
libc       = "0.2"      # mlock/madvise (memlock), NSS getpwnam_r, SO_PEERCRED
rustfft    = "6"        # 2D FFT for the RGB-only moiré/screen-replay PAD cue

# ONNX inference. `load-dynamic` => libonnxruntime.so is dlopened at runtime, so
# this builds without the native lib present (you supply it on the target).
ort     = { version = "=2.0.0-rc.12", default-features = false, features = ["load-dynamic", "api-24"] }

image = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }

# --- native deps (enable as you build each crate) -----------------------------
# nokhwa    = { version = "0.10", features = ["input-native"] }   # V4L2 capture
# tss-esapi = "7"                                                 # TPM 2.0
# pamsm     = "0.5"                                               # PAM service module
# secrecy   = "0.10"

[profile.release]
lto = true
strip = true

# archledger/rust-tss-esapi @ irlume-patches: a stable tss-esapi RELEASE plus the
# minimal patches irlume needs. Today that is (1) Context::policy_authorize_nv
# (TPM2_PolicyAuthorizeNV), required by the Tier-2 systemd-pcrlock seal implemented
# in crates/irlume-core/src/tpm.rs (design notes in tpm_pcrlock.rs), and (2) the upstream PR #530 fix that
# flushes the session handle when tr_sess_set_attributes fails. That fix covers
# three call sites: execute_with_nullauth_session (which irlume calls on every
# seal/unseal) plus the AK helpers load_ak and create_ak_2; a 7.7.0 failure path
# would otherwise leave a loaded session on the TPM.
# Cargo.lock pins an exact commit, so this is a frozen dependency: it never
# moves under a user, only when we bump it.
#
# Why the fork exists: upstream wrote this method (parallaxsecond PR #486, merged
# to main 2024-01-23) but never backported it to a 7.x release, so 7.6.0/7.7.0 both
# ship `// Missing function: PolicyAuthorizeNV`. It only lands in 8.0, whose stable
# release is the open tracking issue #495 (opened Feb 2024, still only alphas out,
# latest 8.0.0-alpha.2 in Feb 2026, a large breaking change set pending). So "just
# wait for a release" is not a near-term option; we maintain the fork branch instead.
#
# Branch model: our fork's `main` mirrors upstream `main` for reference only. The
# `irlume-patches` branch sits on a STABLE release tag (currently v7.7.0) + our
# patches; that is what this [patch] pins. When a newer stable release lands we
# rebase the patches onto it, HW-validate the pcrlock round-trip, then bump. The
# signature already matches upstream's (`auth_handle: NvAuth`), so adopting a
# released crate that carries the method upstream would be a call-site no-op; the
# only fork-local delta is the 7.7.0-flavoured body (Error::from_tss_rc /
# optional_session_1 vs 8.0's ReturnCode / required_session_1). optional_session_1
# is deliberate: it matches every 7.7.0 policy command except policy_signed and
# policy_secret, so it is the consistent choice on this base. Upstream flipped all
# policy commands to required_session_1 only as an 8.0 break (PR #624). Only move to
# a plain crates.io release after that release exists AND passes the HW round-trip.
[patch.crates-io]
tss-esapi = { git = "https://github.com/archledger/rust-tss-esapi", branch = "irlume-patches" }
