[package]
name = "irlume-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

# The shared authentication orchestration: capture RGB+IR -> detect -> align ->
# embed + liveness gate -> match. Used by both the CLI and the irlumed daemon so
# the security-critical pipeline lives in exactly one place.

[dependencies]
sha2.workspace = true
irlume-common.workspace = true
irlume-camera.workspace = true
irlume-vision.workspace = true
irlume-liveness.workspace = true
irlume-core.workspace = true

[dev-dependencies]
serde_json.workspace = true
