[package]
name = "irlume-camera"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
irlume-common.workspace = true
thiserror.workspace = true
# V4L2 capture. Chosen over nokhwa: it's the path linhello proved on this exact
# Hello-class hardware, and builds from cache. nokhwa wraps this crate anyway.
v4l = "0.14"
libc = "0.2"
