[package]
name = "irlume-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "irlume"
path = "src/main.rs"

[dependencies]
irlume-common.workspace = true
irlume-vision.workspace = true
irlume-camera.workspace = true
irlume-liveness.workspace = true
irlume-core.workspace = true
irlume-auth.workspace = true
serde_json.workspace = true
image = { workspace = true }
rpassword = "7"   # no-echo password prompt for `keyring arm`
