[package]
name = "irlume-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "irlume"
path = "src/main.rs"

[dependencies]
sha2.workspace = true
zeroize.workspace = true
irlume-common.workspace = true
irlume-vision.workspace = true
irlume-camera.workspace = true
irlume-liveness.workspace = true
irlume-core.workspace = true
irlume-auth.workspace = true
irlume-fingerprint.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true   # restore default SIGPIPE so `irlume … | head` doesn't panic
image = { workspace = true }
rpassword = "7"   # no-echo password prompt for `keyring arm`
ratatui = "0.30"  # TUI (MIT), bundles crossterm; powers `irlume tui`
