[package]
name = "irlume-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
irlume-common.workspace = true
irlume-vision.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
thiserror.workspace = true
tss-esapi.workspace = true
base64.workspace = true
sha2.workspace = true
rsa.workspace = true
aes-gcm.workspace = true
argon2.workspace = true
rand.workspace = true
