[package]
name = "irlume-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "irlumed"
path = "src/main.rs"

[dependencies]
irlume-common.workspace = true
irlume-auth.workspace = true
irlume-core.workspace = true
serde_json.workspace = true
libc = "0.2"
