[package]
name = "irlume-pam"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pam_irlume"
# PAM modules are C-ABI shared objects loaded by libpam into the host
# (login/sudo/sshd/display-manager). Produces pam_irlume.so.
crate-type = ["cdylib"]

[dependencies]
irlume-common.workspace = true
serde_json.workspace = true
zeroize.workspace = true
pamsm = { version = "0.5", features = ["libpam"] }
