[package]
name = "irlume-vision"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
irlume-common.workspace = true
irlume-camera.workspace = true
thiserror.workspace = true
# Enable when wiring real inference:
# ort     = { workspace = true }
# ndarray = { workspace = true }
# image   = { workspace = true }
