[package]
name = "lumen-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lumen-common.workspace = true
lumen-vision.workspace = true
serde.workspace = true
zeroize.workspace = true
thiserror.workspace = true
# Enable when wiring TPM:
# tss-esapi = { workspace = true }
# secrecy   = { workspace = true }
