[package]
name = "lumen-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "lumend"
path = "src/main.rs"

[dependencies]
lumen-common.workspace = true
lumen-camera.workspace = true
lumen-vision.workspace = true
lumen-liveness.workspace = true
lumen-core.workspace = true
serde_json.workspace = true
