[package]
name = "lumen-pam"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "pam_lumen"
# PAM modules are C-ABI shared objects loaded by libpam into the host
# (login/sudo/sshd/display-manager). Produces pam_lumen.so.
crate-type = ["cdylib"]

[dependencies]
lumen-common.workspace = true
serde_json.workspace = true
# Enable when implementing the module:
# pamsm = { workspace = true }
